This seems to have everything excepy power ON and tuning mode change working

--- a/neat.kv
+++ b/neat.kv
@@ -528,7 +528,7 @@
 
 	BoolToggle:
 		id: tunerButton
-		rig_state: 'tuner_state'
+		rig_state: 'tuner_tx'
 		pos: antenna1.pos[0] + antenna1.width + 10, antenna1.pos[1]
 		size_hint_max: 50, 25
 		text: 'AT'
