--- a/neat.kv
+++ b/neat.kv
@@ -139,36 +139,37 @@
 		pos: autoNotch.pos[0], autoNotch.pos[1] - self.height - 3
 		step: 1
 
-	BoolToggle:
-		id: autoBeatCanceller
-		rig_state: 'auto_beat_canceller'
-		size_hint_max: 50, 25
-		text: 'ABC'
-		pos: autoNotch.pos[0] + autoNotch.width + 10, autoNotch.pos[1]
+	#BoolToggle:
+	#	id: autoBeatCanceller
+	#	rig_state: 'auto_beat_canceller'
+	#	size_hint_max: 50, 25
+	#	text: 'ABC'
+	#	pos: autoNotch.pos[0] + autoNotch.width + 10, autoNotch.pos[1]
 
-	BoolToggle:
-		id: manualBeatCanceller
-		rig_state: 'manual_beat_canceller'
-		size_hint_max: 50, 25
-		text: 'MBC'
-		pos: autoBeatCanceller.pos[0] + autoBeatCanceller.width, autoBeatCanceller.pos[1]
+	#BoolToggle:
+	#	id: manualBeatCanceller
+	#	rig_state: 'manual_beat_canceller'
+	#	size_hint_max: 50, 25
+	#	text: 'MBC'
+	#	pos: autoBeatCanceller.pos[0] + autoBeatCanceller.width, autoBeatCanceller.pos[1]
 
-	StateSlider:
-		id: manualBeatCancellerFrequency
-		rig_state: 'manual_beat_canceller_frequency'
-		min: 0
-		max: 63
-		value_track: True
-		size_hint_max: manualBeatCanceller.pos[0] + manualBeatCanceller.width - autoBeatCanceller.pos[0], 25
-		pos: autoBeatCanceller.pos[0], manualBeatCanceller.pos[1] - self.height - 3
-		step: 1
+	#StateSlider:
+	#	id: manualBeatCancellerFrequency
+	#	rig_state: 'manual_beat_canceller_frequency'
+	#	min: 0
+	#	max: 63
+	#	value_track: True
+	#	size_hint_max: manualBeatCanceller.pos[0] + manualBeatCanceller.width - autoBeatCanceller.pos[0], 25
+	#	pos: autoBeatCanceller.pos[0], manualBeatCanceller.pos[1] - self.height - 3
+	#	step: 1
 
 	BoolToggle:
 		id: noiseReduction1
 		rig_state: 'noise_reduction1'
 		size_hint_max: 50, 25
 		text: 'NR1'
-		pos: manualBeatCanceller.pos[0] + manualBeatCanceller.width + 10, manualBeatCanceller.pos[1] + manualBeatCanceller.height - self.height
+		#pos: manualBeatCanceller.pos[0] + manualBeatCanceller.width + 10, manualBeatCanceller.pos[1] + manualBeatCanceller.height - self.height
+		pos: autoNotch.pos[0] + autoNotch.width + 10, autoNotch.pos[1] + autoNotch.height - self.height
 		on_state: noiseReductionLevel.refresh()
 
 	BoolToggle:
@@ -200,7 +201,7 @@
 		pos: noiseReduction2.pos[0] + noiseReduction2.width + 10, noiseReduction2.pos[1] + noiseReduction2.height - self.height
 
 	StateSlider:
-		rig_state: 'main_af_gain'
+		rig_state: 'main_audio_level'
 		id: mainAFgain
 		min: 0
 		max: 255
@@ -302,7 +303,7 @@
 		pos: bandUpButton.pos[0], bandUpButton.pos[1] - self.height
 
 	BoolToggle:
-		rig_state: 'cw_auto_tune'
+		rig_state: 'auto_zero_beat'
 		size_hint_max: 50, 25
 		text: 'CWA'
 		pos: bandDownButton.pos[0], bandDownButton.pos[1] - self.height
@@ -508,28 +509,30 @@
 		rig_state: 'power_on'
 		active_color: 1, 0, 0, 1
 		size_hint_max: 50, 50
-		pos: 10, antenna2.pos[1]
+		#pos: 10, antenna2.pos[1]
+		pos: 10, noiseBlankerLevel.pos[1] - self.height - 30
 		halign: 'center'
 		text: 'POWER'
 
-	BoolToggle:
-		id: antenna1
-		rig_state: 'antenna1'
-		size_hint_max: 50, 25
-		text: 'ANT1'
-		pos: (root.width - (tunerOnInRXbutton.pos[0] + tunerOnInRXbutton.width - self.pos[0])) / 2,  noiseBlankerLevel.pos[1] - self.height - 30
+	#BoolToggle:
+	#	id: antenna1
+	#	rig_state: 'antenna1'
+	#	size_hint_max: 50, 25
+	#	text: 'ANT1'
+	#	pos: (root.width - (tunerOnInRXbutton.pos[0] + tunerOnInRXbutton.width - self.pos[0])) / 2,  noiseBlankerLevel.pos[1] - self.height - 30
 
-	BoolToggle:
-		id: antenna2
-		rig_state: 'antenna2'
-		size_hint_max: 50, 25
-		text: 'ANT2'
-		pos: antenna1.pos[0], antenna1.pos[1] - self.size[1]
+	#BoolToggle:
+	#	id: antenna2
+	#	rig_state: 'antenna2'
+	#	size_hint_max: 50, 25
+	#	text: 'ANT2'
+	#	pos: antenna1.pos[0], antenna1.pos[1] - self.size[1]
 
 	BoolToggle:
 		id: tunerButton
 		rig_state: 'tuner_tx'
-		pos: antenna1.pos[0] + antenna1.width + 10, antenna1.pos[1]
+		#pos: antenna1.pos[0] + antenna1.width + 10, antenna1.pos[1]
+		pos: powerOn.pos[0] + powerOn.width + 10, powerOn.pos[1]
 		size_hint_max: 50, 25
 		text: 'AT'
 
@@ -572,7 +575,8 @@
 		meter_on_high: '{0:.0f}'
 		meter_on_calculation: ''
 		meter_off_calculation: 'S-Level'
-		pos: 10, antenna2.pos[1] - 50 - self.height
+		#pos: 10, antenna2.pos[1] - 50 - self.height
+		pos: 10, tuneButton.pos[1] - 50 - self.height
 		text: 'TX'
 
 	Label:
@@ -583,7 +587,8 @@
 		size_hint_max: self.text_size
 		halign: 'left'
 		text: 'Output Power'
-		pos: (root.width - (outputPower.pos[0] + outputPower.width - self.pos[0])) / 2, antenna2.pos[1] - 50 - self.height
+		#pos: (root.width - (outputPower.pos[0] + outputPower.width - self.pos[0])) / 2, antenna2.pos[1] - 50 - self.height
+		pos: (root.width - (outputPower.pos[0] + outputPower.width - self.pos[0])) / 2, tuneButton.pos[1] - 50 - self.height
 
 	StateSlider:
 		rig_state: 'output_power'
@@ -647,7 +652,7 @@
 #		pos: bandUpButton.pos[0], bandUpButton.pos[1] - self.height
 
 #	BoolToggle:
-#		rig_state: 'cw_auto_tune'
+#		rig_state: 'auto_zero_beat'
 #		size_hint_max: 50, 25
 #		text: 'CWA'
 #		pos: bandDownButton.pos[0], bandDownButton.pos[1] - self.height
