Use colours from ARRL frequency chart to colour TX frequency
Green for Phone + Image, Red for RTTY + data.

This allows quickly understanding where you are in an unfamiliar
band.

--- a/neat-main.kv
+++ b/neat-main.kv
@@ -713,9 +713,10 @@ Neat:
 
 	FreqDisplay:
 		id: mainTXFreq
-		activeColour: 1.0, 1.0, 1.0, 1.0
+		activeColour: 0.45, 0.45, 0.45, 1.0
 		inactiveColour: 0.45, 0.45, 0.45, 1.0
 		zeroColour: 0.2, 0.2, 0.2, 1.0
+		bandplanColour: True
 		font_size: 70
 		halign: 'right'
 		valign: 'top'
