Add button to set TX freq/mode to RX freq/mode, Fix TX mode
TX Mode buttons did weird things interacting with RX mode.
This was becuase when we sent TSx, the command would take effect,
then mode, VFO, etc would be returned, *then* TSx would be echoed.

We need to update the transmit_set state before parsing responses
after we send it, or weird things happen.

--- a/neat-main.kv
+++ b/neat-main.kv
@@ -698,12 +698,12 @@ Neat:
 	#	on_press: root.control(bandUp = True)
 	#	pos: TXvfoBox.pos[0] + TXvfoBox.width + 10, mainTXFreq.pos[1] + mainTXFreq.height - self.height
 
-	#Button:
-	#	id: bandDownButton
-	#	size_hint_max: 50, 25
-	#	text: 'DOWN'
-	#	on_press: root.control(bandDown = True)
-	#	pos: bandUpButton.pos[0], bandUpButton.pos[1] - self.height
+	Button:
+		id: copyRXFreqButton
+		size_hint_max: 50, 25
+		text: '= RX'
+		on_press: root.control(tx_frequency = app.rig.rx_frequency, tx_mode = app.rig.rx_mode)
+		pos: TXvfoBox.pos[0] + TXvfoBox.width + 10, mainTXFreq.pos[1] + mainTXFreq.height - self.height * 2
 
 	#BoolToggle:
 	#	rig_state: 'auto_zero_beat'
